# decat

./: README.md  pyproject.toml  test.py
decat/: main.py
decat/config/: config.yaml
decat/utils/: pkg.py
